@@ -1,3 +1,8 @@
+
+20/9/12
+  Allow moving transient window
+  Be a bit friendlier with transient windows
+
 19/9/12
   Added background colour changing for the bar
 
